NetBSD Problem Report #40469

From www@NetBSD.org  Sat Jan 24 22:43:30 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 71C6363BFFE
	for <gnats-bugs@gnats.netbsd.org>; Sat, 24 Jan 2009 22:43:30 +0000 (UTC)
Message-Id: <20090124224330.372EE63BFFA@narn.NetBSD.org>
Date: Sat, 24 Jan 2009 22:43:30 +0000 (UTC)
From: hans@netbsd.org
Reply-To: hans@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: 5.0_BETA/amd64 INSTALL kernel panics when installing on log-enabled filesystems
X-Send-Pr-Version: www-1.0

>Number:         40469
>Category:       kern
>Synopsis:       5.0_BETA/amd64 INSTALL kernel panics when installing on log-enabled filesystems
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    ad
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jan 24 22:45:00 +0000 2009
>Closed-Date:    Sun Feb 01 17:37:10 +0000 2009
>Last-Modified:  Mon Feb 02 21:20:06 +0000 2009
>Originator:     Hans Rosenfeld
>Release:        5.0_BETA
>Organization:
>Environment:
NetBSD 5.0_BETA (INSTALL) #0: Sat Jan 24 19:33:06 CET 2009  hrosenfe@schwefel:/export/ws/netbsd/obj/sys/arch/amd64/compile/INSTALL amd64
>Description:
I get a panic in ffs_itimes when installing 5.0_BETA on amd64, iff I use mount options "log" for the filesystems. The panic occurs when choosing where to get the installations sets from, or later in the installation.

Once installed (without logging), the system seems to work even with logging enabled. I have not seen this problem when installing with an i386 install kernel (on the same hardware).

The panic occurs in line 748 of sys/ufs/ffs/ffs_inode.c when trying to access ip->i_ump->um_fstype in the first DIP_ASSIGN() of this block:

        if (ip->i_flag & (IN_CHANGE | IN_MODIFY)) {
                if (cre == NULL)
                        cre = &now;
                DIP_ASSIGN(ip, ctime, cre->tv_sec);
                DIP_ASSIGN(ip, ctimensec, cre->tv_nsec);
        }


ddb output:

uvm_fault(0xffffffff81129460, 0x0, 1) -> e
fatal page fault in supervisor mode
trap type 6 code 0 rip ffffffff8037c76b cs 8 rflags 10246 cr2  19 cpl 0 rsp ffff800048a55ae0
kernel: page fault trap, code=0
Stopped in pid 0.53 (system) at netbsd:ffs_itimes+0x10b:        cmpq $0x1,0x18(%rax)
db{3}> bt
ffs_itimes() at netbsd:ffs_itimes+0x10b
ffs_update() at netbsd:ffs_update+0x50
ffs_full_fsync() at netbsd:ffs_full_fsync+0x3d1
spec_fsync() at netbsd:spec_fsync+0x59
VOP_FSYNC() at netbsd:VOP_FSYNC+0x71
sched_sync() at netbsd:sched_sync+0x14f
db{3}> show reg
ds          0x5ad0
es          0x5ae0
fs          0xd768
gs          0x4b61
rdi         0x87
rsi         0
rbp         0xffff800048a55b20
rbx         0xffff800048ae89f0
rdx         0xf801e0325310aac7
rcx         0x0000000047fd5802
rdx         0xf801e0325310aac7
rcx         0x0000000047fd5802
rax         0x1
r8          0x3e
r9          0x1
r10         0x1e
r11         0x200
r12         0
r13         0
r14         0xffff800048a55ae0
r15         0xffff800048a55ae0
rip         0xffffffff8037c76b  ffs_itimes+0x10b
cs          0x8
rflags      0x10246
rsp         0xffff800048a55ae0
ss          0x10
netbsd:ffs_itimes+0x10b:        cmpq    $0x1,0x18(%rax)
db{3}> dmesg
Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
    2006, 2007, 2008
    The NetBSD Foundation, Inc.  All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
    The Regents of the University of California.  All rights reserved.

NetBSD 5.0_BETA (INSTALL) #0: Sat Jan 24 19:33:06 CET 2009
        hrosenfe@schwefel:/export/ws/netbsd/obj/sys/arch/amd64/compile/INSTALL
total memory = 1919 MB
avail memory = 1840 MB
timecounter: Timecounters tick every 10.000 msec
timecounter: Timecounter "i8254" frequency 1193182 Hz quality 100
SMBIOS rev. 2.5 @ 0xf06f0 (51 entries)
System manufacturer System Product Name (System Version)
mainbus0 (root)
cpu0 at mainbus0 apid 0: AMD 686-class, 2109MHz, id 0x100f22
cpu1 at mainbus0 apid 1: AMD 686-class, 2109MHz, id 0x100f22
cpu2 at mainbus0 apid 2: AMD 686-class, 2109MHz, id 0x100f22
cpu3 at mainbus0 apid 3: AMD 686-class, 2109MHz, id 0x100f22
ioapic0 at mainbus0 apid 4: pa 0xfec00000, version 11, 24 pins
acpi0 at mainbus0: Intel ACPICA 20080321
acpi0: X/RSDT: OemId <A_M_I_,OEMRSDT ,03000826>, AslId <MSFT,00000097>
acpi0: SCI interrupting at int 9
acpi0: fixed-feature power button present
timecounter: Timecounter "ACPI-Fast" frequency 3579545 Hz quality 1000
ACPI-Fast 24-bit timer
attimer1 at acpi0 (TMR, PNP0100): AT Timer
attimer1: io 0x40-0x43 irq 0
pcppi1 at acpi0 (SPKR, PNP0800)
pcppi1: io 0x61
midi0 at pcppi1: PC speaker (CPU-intensive output)
sysbeep0 at pcppi1
LPTE (PNP0400) at acpi0 not configured
aiboost0 at acpi0 (ASOC, ATK0110-16843024)
aiboost0: ASUS AI Boost Hardware monitor
hpet0 at acpi0 (HPET, PNP0103-0)
hpet0: mem 0xfed00000-0xfed00fff
timecounter: Timecounter "hpet0" frequency 25000000 Hz quality 2000
pckbc1 at acpi0 (PS2K, PNP0303): kbd port
pckbc1: io 0x60,0x64 irq 1
pckbc2 at acpi0 (PS2M, PNP0F03): aux port
pckbc2: irq 12
UAR1 (PNP0501) at acpi0 not configured
acpibut0 at acpi0 (PWRB, PNP0C0C-170): ACPI Power Button
attimer1: attached to pcppi1
pckbd0 at pckbc1 (kbd slot)
pckbc1: using irq 1 for kbd slot
wskbd0 at pckbd0 mux 1
pms0 at pckbc1 (aux slot)
pckbc1: using irq 12 for aux slot
wsmouse0 at pms0 mux 0
pci0 at mainbus0 bus 0: configuration mode 1
pci0: i/o space, memory space enabled, rd/line, rd/mult, wr/inv ok
vendor 0x10de product 0x03ea (RAM memory, revision 0xa1) at pci0 dev 0 function 0 not configured
pcib0 at pci0 dev 1 function 0
pcib0: vendor 0x10de product 0x03e0 (rev. 0xa2)
nfsmbc0 at pci0 dev 1 function 1: vendor 0x10de product 0x03eb (rev.  0xa2)
nfsmb0 at nfsmbc0 SMBus 1
iic0 at nfsmb0: I2C bus
nfsmb1 at nfsmbc0 SMBus 2
iic1 at nfsmb1: I2C bus
vendor 0x10de product 0x03f5 (RAM memory, revision 0xa2) at pci0 dev 1 function 2 not configured
ohci0 at pci0 dev 2 function 0: vendor 0x10de product 0x03f1 (rev. 0xa2)
LUB0: Picked IRQ 20 with weight 0
ohci0: interrupting at ioapic0 pin 20
ohci0: OHCI version 1.0, legacy support
usb0 at ohci0: USB revision 1.0
ehci0 at pci0 dev 2 function 1: vendor 0x10de product 0x03f2 (rev. 0xa2)
LUB2: Picked IRQ 21 with weight 0
ehci0: interrupting at ioapic0 pin 21
ehci0: EHCI version 1.0
ehci0: companion controller, 10 ports each: ohci0
usb1 at ehci0: USB revision 2.0
ppb0 at pci0 dev 4 function 0: vendor 0x10de product 0x03f3 (rev. 0xa1)
pci1 at ppb0 bus 1
pci1: i/o space, memory space enabled
ex0 at pci1 dev 7 function 0: 3Com 3c905C-TX 10/100 Ethernet with mngmt (rev. 0x 78)
LNKB: Picked IRQ 16 with weight 0
ex0: interrupting at ioapic0 pin 16
ex0: MAC address 00:0a:5e:55:d5:5f
exphy0 at ex0 phy 24: 3Com internal media interface
exphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, auto
azalia0 at pci0 dev 5 function 0: Generic High Definition Audio Controller
LAZA: Picked IRQ 22 with weight 0
azalia0: interrupting at ioapic0 pin 22
azalia0: host: 0x10de/0x03f0 (rev. 162), HDA rev. 1.0
viaide0 at pci0 dev 6 function 0
viaide0: NVIDIA MCP61 IDE Controller (rev. 0xa2)
viaide0: bus-master DMA support present
viaide0: primary channel configured to compatibility mode
viaide0: primary channel interrupting at ioapic0 pin 14
atabus0 at viaide0 channel 0
viaide0: secondary channel configured to compatibility mode
viaide0: secondary channel ignored (disabled)
nfe0 at pci0 dev 7 function 0: vendor 0x10de product 0x03ef (rev. 0xa2)
LMAC: Picked IRQ 23 with weight 0
nfe0: interrupting at ioapic0 pin 23
nfe0: Ethernet address 00:1d:60:a5:31:c7
ukphy0 at nfe0 phy 1: Generic IEEE 802.3u media interface
ukphy0: OUI 0x00c82e, model 0x0002, rev. 1
ukphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, auto
viaide1 at pci0 dev 8 function 0
viaide1: NVIDIA MCP61 Serial ATA Controller (rev. 0xa2)
viaide1: bus-master DMA support present
viaide1: primary channel wired to native-PCI mode
LSA0: Picked IRQ 20 with weight 1
viaide1: using ioapic0 pin 20 for native-PCI interrupt
atabus1 at viaide1 channel 0
viaide1: secondary channel wired to native-PCI mode
atabus2 at viaide1 channel 1
ppb1 at pci0 dev 9 function 0: vendor 0x10de product 0x03e8 (rev. 0xa2)
pci2 at ppb1 bus 2
pci2: no spaces enabled!
ppb2 at pci0 dev 11 function 0: vendor 0x10de product 0x03e9 (rev. 0xa2)
pci3 at ppb2 bus 3
pci3: no spaces enabled!
ppb3 at pci0 dev 12 function 0: vendor 0x10de product 0x03e9 (rev. 0xa2)
pci4 at ppb3 bus 4
pci4: no spaces enabled!
vga0 at pci0 dev 13 function 0: vendor 0x10de product 0x03d0 (rev. 0xa2)
wsdisplay0 at vga0 kbdmux 1
wsmux1: connecting to wsdisplay0
wskbd0: connecting to wsdisplay0
drm at vga0 not configured
pchb0 at pci0 dev 24 function 0
pchb0: vendor 0x1022 product 0x1200 (rev. 0x00)
pchb1 at pci0 dev 24 function 1
pchb1: vendor 0x1022 product 0x1201 (rev. 0x00)
pchb2 at pci0 dev 24 function 2
pchb2: vendor 0x1022 product 0x1202 (rev. 0x00)
amdtemp0 at pci0 dev 24 function 3
pchb2: vendor 0x1022 product 0x1202 (rev. 0x00)
amdtemp0 at pci0 dev 24 function 3
amdtemp0: AMD CPU Temperature Sensors (Family10h / Family11h)
pchb3 at pci0 dev 24 function 4
pchb3: vendor 0x1022 product 0x1204 (rev. 0x00)
isa0 at pcib0
lpt0 at isa0 port 0x378-0x37b irq 7
com0 at isa0 port 0x3f8-0x3ff irq 4: ns16550a, working fifo
com0: console
timecounter: Timecounter "clockinterrupt" frequency 100 Hz quality 0
timecounter: Timecounter "TSC" frequency 2109763680 Hz quality 3000
azalia0: codec[0]: Realtek ALC662-GR (rev. 1.1), HDA rev. 1.0
audio0 at azalia0: full duplex, independent
uhub0 at usb1: vendor 0x10de EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
uhub0: 8 ports with 8 removable, self powered
uhub1 at usb0: vendor 0x10de OHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub1: 8 ports with 8 removable, self powered
atapibus0 at atabus0: 2 targets
cd0 at atapibus0 drive 0: <HL-DT-ST DVD-ROM GDR-H30N, , 1.00> cdrom removable
cd0: 32-bit data port
cd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 2 (Ultra/33)
cd0(viaide0:0:0): using PIO mode 4, Ultra-DMA mode 2 (Ultra/33) (using DMA)
viaide1 port 0: device present, speed: 3.0Gb/s
wd0 at atabus1 drive 0: <ST380815AS>
wd0: drive supports 16-sector PIO transfers, LBA48 addressing
wd0: 76319 MB, 155061 cyl, 16 head, 63 sec, 512 bytes/sect x 156301488 sectors
wd0: 32-bit data port
wd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133)
wd0(viaide1:0:0): using PIO mode 4, Ultra-DMA mode 6 (Ultra/133) (using DMA)
Kernelized RAIDframe activated
md0: internal 5000 KB image area
pad0: outputs: 44100Hz, 16-bit, stereo
audio1 at pad0: half duplex
boot device: ex0
root on md0a dumps on md0b
root file system type: ffs
warning: no /dev/console
uvm_fault(0xffffffff81129460, 0x0, 1) -> e
fatal page fault in supervisor mode
trap type 6 code 0 rip ffffffff8037c76b cs 8 rflags 10246 cr2  19 cpl 0 rsp ffff800048a55ae0
>How-To-Repeat:
Try to install 5.0_BETA on amd64 on logging filesystems.
>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->ad
Responsible-Changed-By: ad@NetBSD.org
Responsible-Changed-When: Sun, 25 Jan 2009 21:45:43 +0000
Responsible-Changed-Why:
i have a fix pending for this


State-Changed-From-To: open->closed
State-Changed-By: ad@NetBSD.org
State-Changed-When: Sun, 01 Feb 2009 17:37:10 +0000
State-Changed-Why:
done


From: Andrew Doran <ad@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40469 CVS commit: src/sys/ufs/ffs
Date: Sun,  1 Feb 2009 17:36:43 +0000 (UTC)

 Module Name:	src
 Committed By:	ad
 Date:		Sun Feb  1 17:36:43 UTC 2009

 Modified Files:
 	src/sys/ufs/ffs: ffs_vnops.c

 Log Message:
 PR kern/40469 5.0_BETA/amd64 INSTALL kernel panics when installing on log-enabled filesystems
 PR kern/40470 WAPBL corrupts ext2fs

 Don't touch inodes at all unless VOP_FSYNC(). Might fix the ext2fs problem,
 I am not sure.


 To generate a diff of this commit:
 cvs rdiff -r1.108 -r1.109 src/sys/ufs/ffs/ffs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40469 CVS commit: [netbsd-5] src/sys/ufs/ffs
Date: Mon,  2 Feb 2009 21:17:09 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Mon Feb  2 21:17:08 UTC 2009

 Modified Files:
 	src/sys/ufs/ffs [netbsd-5]: ffs_vnops.c

 Log Message:
 Pull up following revision(s) (requested by ad in ticket #395):
 	sys/ufs/ffs/ffs_vnops.c: revision 1.109
 PR kern/40469 5.0_BETA/amd64 INSTALL kernel panics when installing on
 log-enabled filesystems
 PR kern/40470 WAPBL corrupts ext2fs
 Don't touch inodes at all unless VOP_FSYNC(). Might fix the ext2fs problem,
 I am not sure.


 To generate a diff of this commit:
 cvs rdiff -r1.104.4.4 -r1.104.4.5 src/sys/ufs/ffs/ffs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.