PR kern/40469 5.0_BETA/amd64 INSTALL kernel panics when installing on log-enabled filesystems PR kern/40470 WAPBL corrupts ext2fs

Don't touch inodes at all unless VOP_FSYNC(). Might fix the ext2fs problem,
I am not sure.